--- a/Canteen2/index.html
+++ b/Canteen2/index.html
@@ -62,7 +62,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to CANTEEN</h1>
+    <h1>Welcome to IES CANTEEN</h1>
     <div class="container" id="loginContainer">
         <label for="userType">Select User Type:</label>
         <select id="userType">
